@@ -1,0 +1,13 @@
+onEvent('recipes', event => {
+    event.remove({output: 'farmersdelight:wheat_dough'});
+
+    event.replaceInput('create:dough', 'farmersdelight:wheat_dough');
+    event.replaceInput('create:dough', 'farmersdelight:wheat_dough');
+
+    event.shapeless(
+        'farmersdelight:wheat_dough',
+        [
+            'create:dough'
+        ]
+    );
+});
